--- a/index.html
+++ b/index.html
@@ -22,12 +22,35 @@
     </header>
 
     <section class="hero">
-      <img class="main-img" src="img/hero-img (1).svg" alt="Bu yerda rasim bor">
-       <div class="main-demo">
-        <h1 class="main-h1">Tabiiy davolash usullari <br> yordamida kasalliklardan xalos bo'ling.</h1>
-        <p class="main-text">Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko'p uchraydigan kasalliklar yengishda yordam beradi. Sog'ligingizni o'z ishlarning professionallariga ishonib topshiring.</p>
-        <button class="btn">Qabulga yozilish</button>
-       </div>
+        <img class="main-img" src="img/hero-img (1).svg" alt="Bu yerda rasim bor">
+        <div class="main-demo">
+            <h1 class="main-h1">Tabiiy davolash usullari yordamida kasalliklardan xalos bo'ling.</h1>
+            <p class="main-text">Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko'p uchraydigan kasalliklar yengishda yordam beradi. Sog'ligingizni o'z ishlarning professionallariga ishonib topshiring.</p>
+            <button class="btn-2">Qabulga yozilish</button>
+        </div>
+    </section>
+    <section class="box">
+        <h2 class="box-repeat">Xizmatlar</h2>
+        <div class="box-main1">
+            <img class="box-img" src="img/image 1.svg" alt="Bu yerda rasim bor">
+            <h2 class="box-size">Hijoma</h2>
+            <p class="box-pronouns">Imom termiziy Abdulloh Ibn abbos Roziallohu rivoyat qilgan hadisda rasulluloh sallolohi alayhi va ssalam dedilar: "Sizlar hijoma qiladigan kunlaringizni eng yaxshisi  17,19-21 kunlardir" (bu kunlar hijriy-kamariy hisobdagi oylar kunlaridir). </p>
+        </div>
+        <div class="box-main2">
+            <img class="box-img" src="img/image 2.svg" alt="Bu yerda rasim bor">
+            <h2 class="box-size">Manual Terapiya </h2>
+            <p class="box-pronouns">Bu tanani qo'l bilan muolaja qilish usuli. U asosan mushak, bo'g'im va nerv tizimining og'riq va funktsional muammolarini hal qilishda qo'llaniladi. Bu terapiya turli xil usullarni o'z ichiga oladi, jumladan:</p>
+        </div>
+        <div class="box-main3">
+            <img class="box-img" src="img/image 3 (1).svg" alt="Bu yerda rasim bor">
+            <h2 class="box-size">Zuluk bilan davolash</h2>
+            <p class="box-pronouns">Bu an'anaviy tibbiyot usuli bo'lib, asosan o'simliklar va tabiatda mavjud bo'lgan moddalar yordamida sog'liqni yaxshilashga qaratilgan. Zuluklar turli xil kasalliklarni davolashda, stressni kamaytirishda va umumiy salomatlikni yaxshilashda qo'llaniladi.</p>
+        </div>
+        <div class="box-main4">
+            <img class="box-img" src="img/image 3.svg" alt="Bu yerda rasim bor">
+            <h2 class="box-size">Tabiiy dori vositalari</h2>
+            <p class="box-pronouns">bu kasalliklarni davolash, simptomlarni yengillashtirish yoki sog'liqni yaxshilash maqsadida ishlatiladigan moddalar</p>
+        </div>
     </section>
 </body>
 </html>
