--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- HEADER -->
     <header>
         <img src="img/logo (2).svg" alt="BU yerda Rasim bor">
         <nav>
@@ -29,28 +30,52 @@
             <button class="btn-2">Qabulga yozilish</button>
         </div>
     </section>
+
+    <!-- MAIN -->
     <section class="box">
         <h2 class="box-repeat">Xizmatlar</h2>
-        <div class="box-main1">
+        <div class="box-main">
             <img class="box-img" src="img/image 1.svg" alt="Bu yerda rasim bor">
-            <h2 class="box-size">Hijoma</h2>
-            <p class="box-pronouns">Imom termiziy Abdulloh Ibn abbos Roziallohu rivoyat qilgan hadisda rasulluloh sallolohi alayhi va ssalam dedilar: "Sizlar hijoma qiladigan kunlaringizni eng yaxshisi  17,19-21 kunlardir" (bu kunlar hijriy-kamariy hisobdagi oylar kunlaridir). </p>
+            <div class="box-type">
+                <h2 class="box-size">Hijoma</h2>
+                <p class="box-pronouns">Imom termiziy Abdulloh Ibn abbos Roziallohu rivoyat qilgan hadisda rasulluloh sallolohi alayhi va ssalam dedilar: "Sizlar hijoma qiladigan kunlaringizni eng yaxshisi  17,19-21 kunlardir" (bu kunlar hijriy-kamariy hisobdagi oylar kunlaridir). </p>
+            </div>
         </div>
-        <div class="box-main2">
+        <div class="box-main">
             <img class="box-img" src="img/image 2.svg" alt="Bu yerda rasim bor">
-            <h2 class="box-size">Manual Terapiya </h2>
-            <p class="box-pronouns">Bu tanani qo'l bilan muolaja qilish usuli. U asosan mushak, bo'g'im va nerv tizimining og'riq va funktsional muammolarini hal qilishda qo'llaniladi. Bu terapiya turli xil usullarni o'z ichiga oladi, jumladan:</p>
+            <div class="box-type">
+                <h2 class="box-size">Manual Terapiya </h2>
+                <p class="box-pronouns">Bu tanani qo'l bilan muolaja qilish usuli. U asosan mushak, bo'g'im va nerv tizimining og'riq va funktsional muammolarini hal qilishda qo'llaniladi. Bu terapiya turli xil usullarni o'z ichiga oladi, jumladan:</p>
+            </div>
         </div>
-        <div class="box-main3">
+        <div class="box-main">
             <img class="box-img" src="img/image 3 (1).svg" alt="Bu yerda rasim bor">
-            <h2 class="box-size">Zuluk bilan davolash</h2>
-            <p class="box-pronouns">Bu an'anaviy tibbiyot usuli bo'lib, asosan o'simliklar va tabiatda mavjud bo'lgan moddalar yordamida sog'liqni yaxshilashga qaratilgan. Zuluklar turli xil kasalliklarni davolashda, stressni kamaytirishda va umumiy salomatlikni yaxshilashda qo'llaniladi.</p>
+            <div class="box-type">
+                <h2 class="box-size">Zuluk bilan davolash</h2>
+                <p class="box-pronouns">Bu an'anaviy tibbiyot usuli bo'lib, asosan o'simliklar va tabiatda mavjud bo'lgan moddalar yordamida sog'liqni yaxshilashga qaratilgan. Zuluklar turli xil kasalliklarni davolashda, stressni kamaytirishda va umumiy salomatlikni yaxshilashda qo'llaniladi.</p>
+            </div>
         </div>
-        <div class="box-main4">
+
+        <div class="box-main">
             <img class="box-img" src="img/image 3.svg" alt="Bu yerda rasim bor">
-            <h2 class="box-size">Tabiiy dori vositalari</h2>
-            <p class="box-pronouns">bu kasalliklarni davolash, simptomlarni yengillashtirish yoki sog'liqni yaxshilash maqsadida ishlatiladigan moddalar</p>
+            <div class="box-type">
+                <h2 class="box-size">Tabiiy dori vositalari</h2>
+                <p class="box-pronouns">bu kasalliklarni davolash, simptomlarni yengillashtirish yoki sog'liqni yaxshilash maqsadida ishlatiladigan moddalar</p>
+            </div>
         </div>
+        <br>
+        <br>
+        <button class="btn-3">Qabulga yozilish</button>
     </section>
+
+    <!--  FOOTER -->
+
+    <footer>
+        <div class="footer-start">
+            <h2 class="footer-text">Qabulga ro'yxatdan o'ting</h2>
+            <button class="btn-4">Qong'iroq qilish</button>
+            <button class="btn-5">Telegramdan Yozish</button>
+        </div>
+    </footer>
 </body>
 </html>
