Add new registration

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AnsorMed</title>
     <link rel="stylesheet" href="css/style.css">
+
+
 </head>
 <body>
     <!-- HEADER -->
@@ -49,7 +51,7 @@
             </div>
         </div>
         <div class="box-main">
-            <img class="box-img" src="img/image 3 (1).svg" alt="Bu yerda rasim bor">
+            <img class="box-img" src="img/image 3.svg" alt="Bu yerda rasim bor">
             <div class="box-type">
                 <h2 class="box-size">Zuluk bilan davolash</h2>
                 <p class="box-pronouns">Bu an'anaviy tibbiyot usuli bo'lib, asosan o'simliklar va tabiatda mavjud bo'lgan moddalar yordamida sog'liqni yaxshilashga qaratilgan. Zuluklar turli xil kasalliklarni davolashda, stressni kamaytirishda va umumiy salomatlikni yaxshilashda qo'llaniladi.</p>
@@ -57,12 +59,13 @@
         </div>
 
         <div class="box-main">
-            <img class="box-img" src="img/image 3.svg" alt="Bu yerda rasim bor">
+            <img class="box-img" src="img/image 3 (1).svg" alt="Bu yerda rasim bor">
             <div class="box-type">
                 <h2 class="box-size">Tabiiy dori vositalari</h2>
                 <p class="box-pronouns">bu kasalliklarni davolash, simptomlarni yengillashtirish yoki sog'liqni yaxshilash maqsadida ishlatiladigan moddalar</p>
             </div>
         </div>
+        <br>
         <br>
         <br>
         <button class="btn-3">Qabulga yozilish</button>
@@ -71,11 +74,11 @@
     <!--  FOOTER -->
 
     <footer>
-        <div class="footer-start">
-            <h2 class="footer-text">Qabulga ro'yxatdan o'ting</h2>
-            <button class="btn-4">Qong'iroq qilish</button>
-            <button class="btn-5">Telegramdan Yozish</button>
-        </div>
+        <section class="appointment">
+            <h2>Qabulga ro'yxatdan o'ting</h2>
+            <button class="call-button">Qo'ng'iroq qilish</button>
+            <button class="telegram-button">Telegramdan yozish</button>
+        </section>
     </footer>
 </body>
 </html>
