--- a/index.html
+++ b/index.html
@@ -80,5 +80,17 @@
             <button class="telegram-button">Telegramdan yozish</button>
         </section>
     </footer>
+    <div class="footer-nav">
+        <img src="img/logo (2).svg" alt="BU yerda Rasim bor">
+        <nav class="footer-text">
+            <ul>
+                <li><a href="#">Xizmatlar</a></li>
+                <li><a href="#">Dorilar</a></li>
+                <li><a href="#">Asal</a></li>
+                <li><a href="#">Kontaktlar</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
