Add new registration menu (2)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <!-- HEADER -->
+    <!-- HEADER START-->
     <header>
         <img src="img/logo (2).svg" alt="BU yerda Rasim bor">
         <nav>
@@ -23,7 +23,7 @@
                 <li><a href="#">Blog</a></li>
             </ul>
         </nav>
-        <button class="btn">Qabulga yozilish</button>
+        <a href="default.html"><button class="btn">Qabulga yozilish</button></a>
     </header>
 
     <section class="hero">
@@ -31,9 +31,11 @@
         <div class="main-demo">
             <h1 class="main-h1">Tabiiy davolash usullari yordamida kasalliklardan xalos bo'ling.</h1>
             <p class="main-text">Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko'p uchraydigan kasalliklar yengishda yordam beradi. Sog'ligingizni o'z ishlarning professionallariga ishonib topshiring.</p>
-            <button class="btn-2">Qabulga yozilish</button>
+            <a href="default.html"> <button class="btn-2">Qabulga yozilish</button></a>
         </div>
     </section>
+
+    <!-- HEADER END -->
 
     <!-- MAIN -->
     <section class="box">
@@ -70,8 +72,10 @@
         <br>
         <br>
         <br>
-        <button class="btn-3">Qabulga yozilish</button>
+        <a href="default.html"><button class="btn-3">Qabulga yozilish</button></a>
     </section>
+
+    <!-- MAIN END -->
 
     <!--  FOOTER -->
 
@@ -83,7 +87,7 @@
         </section>
     </footer>
     <div class="footer-nav">
-        <img src="img/logo (2).svg" alt="BU yerda Rasim bor">
+        <img src="img/logo (2).svg" alt="Bu yerda Rasim bor">
         <nav class="footer-text">
             <ul>
                 <li><a href="#">Xizmatlar</a></li>
@@ -94,5 +98,7 @@
             </ul>
         </nav>
     </div>
+
+    <!-- FOOTER END -->
 </body>
 </html>
