Add new target _blank

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#">Blog</a></li>
             </ul>
         </nav>
-        <a href="default.html"><button class="btn">Qabulga yozilish</button></a>
+        <a href="default.html" target="_blank"><button class="btn">Qabulga yozilish</button></a>
     </header>
 
     <section class="hero">
@@ -31,7 +31,7 @@
         <div class="main-demo">
             <h1 class="main-h1">Tabiiy davolash usullari yordamida kasalliklardan xalos bo'ling.</h1>
             <p class="main-text">Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko'p uchraydigan kasalliklar yengishda yordam beradi. Sog'ligingizni o'z ishlarning professionallariga ishonib topshiring.</p>
-            <a href="default.html"> <button class="btn-2">Qabulga yozilish</button></a>
+            <a href="default.html" target="_blank"> <button class="btn-2">Qabulga yozilish</button></a>
         </div>
     </section>
 
@@ -72,7 +72,7 @@
         <br>
         <br>
         <br>
-        <a href="default.html"><button class="btn-3">Qabulga yozilish</button></a>
+        <a href="default.html" target="_blank"><button class="btn-3">Qabulga yozilish</button></a>
     </section>
 
     <!-- MAIN END -->
